--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
             //définie les dimmensions de la fenetre de jeu, 
             //la map peut faire la taille que vous souhaitez (bon y'a une limite mais je ne sais plus a combien elle est),
-            width: 800,
-            height: 600,
+            width: 1600,
+            height: 1600,
 
 
             physics: {
@@ -66,47 +66,41 @@
             function preload(){
 
                 this.load.image('bg',"assets/background_test.png");
+                this.load.image('grotte', 'assets/grotte.png')
                 //this.load.spritesheet('player','asset/hero.png');
 
 
                 this.load.tilemapTiledJSON('temple','tiled/premierNiveau.json');
-                this.load.image('Tilset_temple','assets/Tileset_vitre.png');
-                this.load.image('sol','assets/plateforme_grotte.png');
-                this.load.image('mur_bord','assets/mur_bord.png');
+                this.load.image('tileset', 'assets/Tileset.png')
 
             }
 
             function create(){
 
                 this.add.image(800,800,'bg')
+                this.add.image(800,1456,'grotte')
 
-                let map = this.make.tilemap({key : 'temple'});
-                let tile1 = map.addTilesetImage('Tileset_vitre', 'Tilset_temple');
-                let tile2 = map.addTilesetImage('plateforme_grotte','sol');
-                let tile3 = map.addTilesetImage('mur_bord','mur_bord');
+                const map = this.add.tilemap("temple");
 
-                const fondTemple = map.createStaticLayer(
+                const tileset = map.addTilesetImage(
+                    "tileset",
+                    "tileset"
+                );
+
+
+
+                const fond = map.createLayer(
                     "fond",
-                    tile1
-                );
-
-                const solGrotte = map.createStaticLayer(
-                    "fond_grotte",
-                    tile2
-                );
-
-                const solTemple = map.createStaticLayer(
+                    tileset
+                )
+                const sol = map.createLayer(
                     "sol",
-                    tile1
-                );
-
-                const mur = map.createStaticLayer(
-                    "mur",
-                    tile3
-                );
-
-
-                
+                    tileset
+                )
+                const deco = map.createLayer(
+                    "deco",
+                    tileset
+                )
 
 
 
