--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
 
             function setKey1(player){
                 cle1 = true;
+                this.add.image(25,25, 'clef_bleu');
 
             }
             function setKey2(player){
