--- a/index.html
+++ b/index.html
@@ -853,14 +853,20 @@
             }
             function setKey2(player){
                 cle2 = true;
+                this.add.image(25,25, 'clef_jaune');
+
 
             }
             function setKey3(player){
                 cle3 = true;
+                this.add.image(25,25, 'clef_vert');
+
 
             }
             function setKey4(player){
                 cle4 = true;
+                this.add.image(25,25, 'clef_rouge');
+
 
             }
 
